Added more clarifying information to the explanation portions of both notebooks. Changed the KFold number from 3 to 5 - will evaluate the best number for the next commit (5,10,20).

--- a/Classifiers - Boolean.ipynb
+++ b/Classifiers - Boolean.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: 0, dtype: bool"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "[10 rows x 43 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "1.0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,14 +688,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that our X and y are in the right format, we need to ensure one last time that the dimensions of each dataframe are correct. For our X, we see that there are 20,514 rows and 43 columns (different attributes in dataset). For our y, we see that there are 20,514 rows and no columns.\n",
+    "Now that our X and y are in the right format, we need to ensure one last time that the dimensions of each variable are correct. For our X, we see that there are 20,514 rows (number of records)and 43 columns (number of boolean attributes - minus 'Denied' -in dataset). For our y, we see that there are 20,514 rows and no columns.\n",
     "\n",
     "Our data has passed the check and is ready to be used."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "(20514, 43)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "(20514,)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,6 +744,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If you are interested in looking at the machine learning process step-by-step, then this is the section for you. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### A. Run train_test_split() on X & y"
    ]
   },
@@ -751,12 +758,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This step is not needed for this notebook but it shows you how the train_test_split function works. Our X and y are randomly split up into training and testing groups. In this case, our test group will be comprised of 33% of the X data(test_size), and will be the same each time we run this line (random_state)."
+    "The train_test_split function works by taking the X and y variables and both the training set and the test set. In this case, our test group will be comprised of 33% of the X data(test_size), and will be the same each time we run this line (random_state)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -768,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +784,7 @@
        "(13744, 43)"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +805,7 @@
        "(6770, 43)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,12 +826,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step in our machine learning model is taking our training data and feeding it into an algorithm to build a model. This is essentially the step that teaches an algorithm that for each record X = y. To do this, there are a number of classification models. For this example we will focus on the LogisticRegression classifier."
+    "The next step in our machine learning model is taking our training data and feeding it into an algorithm to build a model. This is essentially the step that teaches an algorithm that for each record, X = y. To do this, there are a number of classification models. For this example we will focus on the LogisticRegression classifier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,17 +841,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "#send X and y into our classifier to build a model\n",
-    "logreg_model = clf.fit(X, y)"
+    "logreg_model = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -860,6 +867,7 @@
     }
    ],
    "source": [
+    "#print our classifier and all of the parameters that were used in the model\n",
     "print(logreg_model)"
    ]
   },
@@ -874,12 +882,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step in our model is to take the model we just made using the training data and feeding the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
+    "The next step in our model is to take the model we just made using the training data and feed the test data into it. This will output an array of values that the algorithm has determined to be the denied status."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,21 +897,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the model's predictions: \n",
+      "Here are the model's predictions: \n",
       "[0. 1. 0. ... 0. 0. 1.]\n"
      ]
     }
    ],
    "source": [
     "#print our results for the predictions\n",
-    "print(\"Here is the model's predictions: \")\n",
+    "print(\"Here are the model's predictions: \")\n",
     "print(y_pred)"
    ]
   },
@@ -923,24 +931,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import our score functions\n",
+    "#import our score function\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score for LogisticRegression classifier:   0.9957163958641063\n"
+      "Accuracy score for LogisticRegression classifier:   0.9954209748892171\n"
      ]
     }
    ],
@@ -954,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Here we can see that our LogisticRegression model was correct 99.57% of the time when predicting the denied status.***"
+    "***Here we can see that our LogisticRegression model was correct 99.54% of the time when predicting the denied status from all boolean fields (minus denied).***"
    ]
   },
   {
@@ -968,14 +976,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use  different classifiers and evaluate each against 5 accuracy metrics.\n",
+    "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use 5 different classifiers and evaluate each against 5 accuracy metrics.\n",
     "\n",
-    "Note: the cross_val_score() function handles test_train_split(X,y,test_size=33,random_state-42), fit(X_train,y_train), predict(X_test), and also any of the accuracy score metrics. This function is essentially and all-in-one function."
+    "__Note:__ \n",
+    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html)\n",
+    "2. The cross_val_score() function works by running all of the following functions:\n",
+    "    - Shuffle the dataset randomly\n",
+    "    - Split the dataset into k (n=5) groups\n",
+    "        - For each unique group:\n",
+    "        - Take the group as a hold out or test data set\n",
+    "        - Take the remaining groups as a training data set\n",
+    "        - Fit a model on the training set and evaluate it on the test set\n",
+    "        - Retain the evaluation score and discard the model\n",
+    "    - Summarize the skill of the model using the sample of model evaluation scores\n",
+    "    \n",
+    "_This function is essentially an all-in-one function._"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -992,20 +1012,20 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9970754501239952\n",
-      "\t* f1 score:  0.9908797234769704\n",
-      "\t* accuracy score:  0.9905914272360826\n",
-      "\t* precision score:  0.992444556801408\n",
-      "\t* recall score:  0.9912538786686828\n",
+      "\t* roc_auc score:  0.9973061556855818\n",
+      "\t* f1 score:  0.9922761344826071\n",
+      "\t* accuracy score:  0.9915662782287535\n",
+      "\t* precision score:  0.9919107299400372\n",
+      "\t* recall score:  0.9911617041219927\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8636564070817899\n",
-      "\t* f1 score:  0.8907724906494924\n",
-      "\t* accuracy score:  0.8704304545373539\n",
-      "\t* precision score:  0.8046325888620532\n",
-      "\t* recall score:  0.9976065543588328\n",
+      "\t* roc_auc score:  0.863871159986575\n",
+      "\t* f1 score:  0.8906527037750965\n",
+      "\t* accuracy score:  0.870236669603474\n",
+      "\t* precision score:  0.8047528594456154\n",
+      "\t* recall score:  0.9972382046868524\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
@@ -1014,11 +1034,11 @@
       "                   warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9984125772997219\n",
-      "\t* f1 score:  0.9926387733319827\n",
-      "\t* accuracy score:  0.992200056251996\n",
-      "\t* precision score:  0.993771958097328\n",
-      "\t* recall score:  0.9915300454734327\n",
+      "\t* roc_auc score:  0.9984472129524743\n",
+      "\t* f1 score:  0.9932820218160119\n",
+      "\t* accuracy score:  0.99288244787167\n",
+      "\t* precision score:  0.9950620120753026\n",
+      "\t* recall score:  0.9915299434970791\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
       "                       max_features=None, max_leaf_nodes=None,\n",
@@ -1028,22 +1048,22 @@
       "                       random_state=None, splitter='best')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9969934531448285\n",
-      "\t* f1 score:  0.9941708934444131\n",
-      "\t* accuracy score:  0.9937601875843742\n",
-      "\t* precision score:  0.9986986257675778\n",
-      "\t* recall score:  0.9895963183862501\n",
+      "\t* roc_auc score:  0.9969235687430992\n",
+      "\t* f1 score:  0.9942126031981742\n",
+      "\t* accuracy score:  0.9937600923050895\n",
+      "\t* precision score:  0.9987889998709747\n",
+      "\t* recall score:  0.9897803615271638\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
       "                     weights='uniform')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9864834515615154\n",
-      "\t* f1 score:  0.975175908918582\n",
-      "\t* accuracy score:  0.9732369828178317\n",
-      "\t* precision score:  0.9607542544782968\n",
-      "\t* recall score:  0.990149008011889\n"
+      "\t* roc_auc score:  0.985502722933548\n",
+      "\t* f1 score:  0.9767377263424107\n",
+      "\t* accuracy score:  0.9749917788403508\n",
+      "\t* precision score:  0.9638182248317164\n",
+      "\t* recall score:  0.9900568164964462\n"
      ]
     }
    ],
@@ -1052,7 +1072,7 @@
     "clf_names = ['RandomForest','GausianNB','LogisticRegression','DecisionTreeClassRegressor', 'KNeighbors']\n",
     "metric_names = ['roc_auc','f1','accuracy','precision','recall']\n",
     "\n",
-    "scv = StratifiedKFold(n_splits=3)\n",
+    "scv = StratifiedKFold(n_splits=5)\n",
     "\n",
     "scores_df = pd.DataFrame(index=metric_names,columns=clf_names)\n",
     "clf_scores = []\n",
@@ -1080,7 +1100,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For boolean classification, the top performing machine learning algorithm is RandomForrestClassifier followed closely behind by the DecisionTreeClassifier. Both of these classifiers work by building out a tree via simple if then else rules - the deeper the tree, the more complex the model."
+    "For boolean classification, the top performing machine learning algorithm is DecisionTreeClassifier followed closely behind by the LogisticRegression classifier and then the RandomForrestClassifier. Both the DecisionTreeClassifier and the RandomForestClassifier work by building out a tree via simple __IF then ELSE__ rules - the deeper the tree, the more complex the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: The accuracy_score for LogisticRegression is different in sections 4 and 5 because in section 4 the function was only run once whereas in section 5 it was run 5 times and averaged."
    ]
   },
   {
