Updated the fold numbers and created file with comparisons and decision on which fold to use.

--- a/Classifiers - Boolean.ipynb
+++ b/Classifiers - Boolean.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: 0, dtype: bool"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "[10 rows x 43 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "1.0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "(20514, 43)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "(20514,)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {
     "scrolled": true
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "(13744, 43)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "(6770, 43)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -979,10 +979,10 @@
     "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use 5 different classifiers and evaluate each against 5 accuracy metrics.\n",
     "\n",
     "__Note:__ \n",
-    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html)\n",
+    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at ***.\n",
     "2. The cross_val_score() function works by running all of the following functions:\n",
     "    - Shuffle the dataset randomly\n",
-    "    - Split the dataset into k (n=5) groups\n",
+    "    - Split the dataset into k (n=20) groups\n",
     "        - For each unique group:\n",
     "        - Take the group as a hold out or test data set\n",
     "        - Take the remaining groups as a training data set\n",
@@ -990,12 +990,19 @@
     "        - Retain the evaluation score and discard the model\n",
     "    - Summarize the skill of the model using the sample of model evaluation scores\n",
     "    \n",
-    "_This function is essentially an all-in-one function._"
+    "__The cross_val_score() function is essentially an all-in-one function.__\n",
+    "\n",
+    "3. For the scoring metrics:\n",
+    "    - __roc_auc:__ The area under a ROC Curve (plots the fraction of _true positives out of the positives (TPR = true positive rate) vs. the fraction of false positives out of the negatives (FPR = false positive rate))_\n",
+    "    - __f_1:__ The weighted average of Precision and Recall _(F1 = 2 * ((precision * recall) / (precision + recall)))_\n",
+    "    - __accuracy:__ A ratio of correctly predicted observation to the total observations _(Accuracy = (TruePositives+TrueNegatives)/(TruePositives+FalsePositives+FalseNegatives+TrueNegatives))_\n",
+    "    - __precision:__ The ability of the classifier to not label negative samples as positive _(Precision = TruePositives/(TruePositives+FalsePositives))_\n",
+    "    - __recall:__ The ability of the classifier to find all positive samples _(Recall = TruePositives/(TruePositives+FalseNegatives))_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1012,20 +1019,20 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9973061556855818\n",
-      "\t* f1 score:  0.9922761344826071\n",
-      "\t* accuracy score:  0.9915662782287535\n",
-      "\t* precision score:  0.9919107299400372\n",
-      "\t* recall score:  0.9911617041219927\n",
+      "\t* roc_auc score:  0.9975312166593231\n",
+      "\t* f1 score:  0.9939071275432465\n",
+      "\t* accuracy score:  0.9935164723529228\n",
+      "\t* precision score:  0.996587143461646\n",
+      "\t* recall score:  0.9912539946917995\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.863871159986575\n",
-      "\t* f1 score:  0.8906527037750965\n",
-      "\t* accuracy score:  0.870236669603474\n",
-      "\t* precision score:  0.8047528594456154\n",
-      "\t* recall score:  0.9972382046868524\n",
+      "\t* roc_auc score:  0.8649083773730064\n",
+      "\t* f1 score:  0.8907554188344244\n",
+      "\t* accuracy score:  0.8700440445257559\n",
+      "\t* precision score:  0.8055264056757668\n",
+      "\t* recall score:  0.9968700912685515\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
@@ -1034,11 +1041,11 @@
       "                   warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9984472129524743\n",
-      "\t* f1 score:  0.9932820218160119\n",
-      "\t* accuracy score:  0.99288244787167\n",
-      "\t* precision score:  0.9950620120753026\n",
-      "\t* recall score:  0.9915299434970791\n",
+      "\t* roc_auc score:  0.9985335815901376\n",
+      "\t* f1 score:  0.9950997654967498\n",
+      "\t* accuracy score:  0.9948323576559874\n",
+      "\t* precision score:  0.9987014506290892\n",
+      "\t* recall score:  0.991530237785722\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
       "                       max_features=None, max_leaf_nodes=None,\n",
@@ -1048,22 +1055,22 @@
       "                       random_state=None, splitter='best')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.9969235687430992\n",
-      "\t* f1 score:  0.9942126031981742\n",
-      "\t* accuracy score:  0.9937600923050895\n",
-      "\t* precision score:  0.9987889998709747\n",
-      "\t* recall score:  0.9897803615271638\n",
+      "\t* roc_auc score:  0.9967712674432809\n",
+      "\t* f1 score:  0.994732973895218\n",
+      "\t* accuracy score:  0.9944423037457112\n",
+      "\t* precision score:  0.9978727430682574\n",
+      "\t* recall score:  0.9914379874878128\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
       "                     weights='uniform')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.985502722933548\n",
-      "\t* f1 score:  0.9767377263424107\n",
-      "\t* accuracy score:  0.9749917788403508\n",
-      "\t* precision score:  0.9638182248317164\n",
-      "\t* recall score:  0.9900568164964462\n"
+      "\t* roc_auc score:  0.9897027394708887\n",
+      "\t* f1 score:  0.9786759932590895\n",
+      "\t* accuracy score:  0.9770873331104722\n",
+      "\t* precision score:  0.9681315897503339\n",
+      "\t* recall score:  0.9895980595276784\n"
      ]
     }
    ],
@@ -1072,7 +1079,7 @@
     "clf_names = ['RandomForest','GausianNB','LogisticRegression','DecisionTreeClassRegressor', 'KNeighbors']\n",
     "metric_names = ['roc_auc','f1','accuracy','precision','recall']\n",
     "\n",
-    "scv = StratifiedKFold(n_splits=5)\n",
+    "scv = StratifiedKFold(n_splits=20)\n",
     "\n",
     "scores_df = pd.DataFrame(index=metric_names,columns=clf_names)\n",
     "clf_scores = []\n",
@@ -1100,14 +1107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For boolean classification, the top performing machine learning algorithm is DecisionTreeClassifier followed closely behind by the LogisticRegression classifier and then the RandomForrestClassifier. Both the DecisionTreeClassifier and the RandomForestClassifier work by building out a tree via simple __IF then ELSE__ rules - the deeper the tree, the more complex the model."
+    "For boolean classification, the top performing machine learning algorithm is LogisticRegression followed closely behind by the  DecisionTreeClassifier and then the RandomForrestClassifier. Both the works by analyzing a dataset with one or more independent variables that determine an outcome - the outcome is measured with a binary variable (only 2 outcomes possible)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: The accuracy_score for LogisticRegression is different in sections 4 and 5 because in section 4 the function was only run once whereas in section 5 it was run 5 times and averaged."
+    "Note: The accuracy_score for LogisticRegression is different in sections 4 and 5 because in section 4 the function was only run once whereas in section 5 it was run 20 times and averaged."
    ]
   },
   {
