--- a/Classifiers - Text.ipynb
+++ b/Classifiers - Text.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "\"Applicant's drug abuse was not mitigated where marijuana use was recent, and had continued after Applicant stated an intent to refrain from drug use in the future. He falsified his drug abuse history on security questionnaires in March and October 1995 an\""
       ]
      },
-     "execution_count": 170,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        " ...]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
        "\twith 19 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "Name: Denied, dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1294,7 @@
        "(700, 2684)"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "(700,)"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "(469, 2684)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 206,
    "metadata": {
     "scrolled": true
    },
@@ -1388,7 +1388,7 @@
        "(231, 2684)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1571,10 +1571,10 @@
     "Now that we understand how machine learning is done, we can determine which model is the best choice for our data. In this example we will use 5 different classifiers and evaluate each against 5 accuracy metrics.\n",
     "\n",
     "__Note:__ \n",
-    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html)\n",
+    "1. For picking a fold size, it is recommended to choose n=5, 10, or 20 (http://vinhkhuc.github.io/2015/03/01/how-many-folds-for-cross-validation.html). For this problem, we have chosen K = 20 and the comparisons can be found at ***.\n",
     "2. The cross_val_score() function works by running all of the following functions:\n",
     "    - Shuffle the dataset randomly\n",
-    "    - Split the dataset into k (n=5) groups\n",
+    "    - Split the dataset into k (n=20) groups\n",
     "        - For each unique group:\n",
     "        - Take the group as a hold out or test data set\n",
     "        - Take the remaining groups as a training data set\n",
@@ -1582,12 +1582,19 @@
     "        - Retain the evaluation score and discard the model\n",
     "    - Summarize the skill of the model using the sample of model evaluation scores\n",
     "    \n",
-    "_This function is essentially an all-in-one function._"
+    "__The cross_val_score() function is essentially an all-in-one function.__\n",
+    "\n",
+    "3. For the scoring metrics:\n",
+    "    - __roc_auc:__ The area under a ROC Curve (plots the fraction of _true positives out of the positives (TPR = true positive rate) vs. the fraction of false positives out of the negatives (FPR = false positive rate))_\n",
+    "    - __f_1:__ The weighted average of Precision and Recall _(F1 = 2 * ((precision * recall) / (precision + recall)))_\n",
+    "    - __accuracy:__ A ratio of correctly predicted observation to the total observations _(Accuracy = (TruePositives+TrueNegatives)/(TruePositives+FalsePositives+FalseNegatives+TrueNegatives))_\n",
+    "    - __precision:__ The ability of the classifier to not label negative samples as positive _(Precision = TruePositives/(TruePositives+FalsePositives))_\n",
+    "    - __recall:__ The ability of the classifier to find all positive samples _(Recall = TruePositives/(TruePositives+FalseNegatives))_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1604,20 +1611,20 @@
       "                       verbose=0, warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8295035201261562\n",
-      "\t* f1 score:  0.7361534010217821\n",
-      "\t* accuracy score:  0.7470649377154811\n",
-      "\t* precision score:  0.7196062580598128\n",
-      "\t* recall score:  0.772847399829497\n",
+      "\t* roc_auc score:  0.8453639625784956\n",
+      "\t* f1 score:  0.7847400443360619\n",
+      "\t* accuracy score:  0.7504715219421101\n",
+      "\t* precision score:  0.7536855864723512\n",
+      "\t* recall score:  0.7642156862745098\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  GaussianNB(priors=None, var_smoothing=1e-09)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.7356760483331932\n",
-      "\t* f1 score:  0.733853231839809\n",
-      "\t* accuracy score:  0.7356363662869096\n",
-      "\t* precision score:  0.7375965548078538\n",
-      "\t* recall score:  0.7351236146632567\n",
+      "\t* roc_auc score:  0.7362881263616556\n",
+      "\t* f1 score:  0.7405972527106925\n",
+      "\t* accuracy score:  0.7369561157796451\n",
+      "\t* precision score:  0.740146952720482\n",
+      "\t* recall score:  0.7503267973856209\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
@@ -1626,11 +1633,11 @@
       "                   warm_start=False)\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8881360675181142\n",
-      "\t* f1 score:  0.8022969911984908\n",
-      "\t* accuracy score:  0.7913412491890986\n",
-      "\t* precision score:  0.7717194757095867\n",
-      "\t* recall score:  0.8455242966751918\n",
+      "\t* roc_auc score:  0.8984407706437697\n",
+      "\t* f1 score:  0.8213369307550625\n",
+      "\t* accuracy score:  0.8098366013071896\n",
+      "\t* precision score:  0.7941392775611041\n",
+      "\t* recall score:  0.8630718954248368\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
       "                       max_features=None, max_leaf_nodes=None,\n",
@@ -1640,22 +1647,22 @@
       "                       random_state=None, splitter='best')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.7494887912299029\n",
-      "\t* f1 score:  0.7276623458693431\n",
-      "\t* accuracy score:  0.7370244108664437\n",
-      "\t* precision score:  0.7628775146422205\n",
-      "\t* recall score:  0.6884057971014492\n",
+      "\t* roc_auc score:  0.7369281045751632\n",
+      "\t* f1 score:  0.7329384173685057\n",
+      "\t* accuracy score:  0.7281676003734827\n",
+      "\t* precision score:  0.7294025002831034\n",
+      "\t* recall score:  0.732516339869281\n",
       "-----------------------------------------------------------------------------------------------------------\n",
       "Classifier:  KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
       "                     metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
       "                     weights='uniform')\n",
       "\n",
       "Scoring Metrics: \n",
-      "\t* roc_auc score:  0.8453987208273798\n",
-      "\t* f1 score:  0.7614371990602891\n",
-      "\t* accuracy score:  0.7614020394626548\n",
-      "\t* precision score:  0.7714006106143334\n",
-      "\t* recall score:  0.7613384484228474\n"
+      "\t* roc_auc score:  0.8541175402622923\n",
+      "\t* f1 score:  0.7670202071542204\n",
+      "\t* accuracy score:  0.7681909430438841\n",
+      "\t* precision score:  0.7781400476850739\n",
+      "\t* recall score:  0.766830065359477\n"
      ]
     }
    ],
@@ -1664,7 +1671,7 @@
     "clf_names = ['RandomForest','GausianNB','LogisticRegression','DecisionTreeClassRegressor', 'KNeighbors']\n",
     "metric_names = ['roc_auc','f1','accuracy','precision','recall']\n",
     "\n",
-    "scv = StratifiedKFold(n_splits=5)\n",
+    "scv = StratifiedKFold(n_splits=20)\n",
     "\n",
     "scores_df = pd.DataFrame(index=metric_names,columns=clf_names)\n",
     "clf_scores = []\n",
@@ -1699,8 +1706,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: The accuracy_score for LogisticRegression is different in sections 4 and 5 because in section 4 the function was only run once whereas in section 5 it was run 5 times and averaged."
+    "Note: The accuracy_score for LogisticRegression is different in sections 4 and 5 because in section 4 the function was only run once whereas in section 5 it was run 20 times and averaged."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
